Lab1/A1.output
Nonterminals useless in grammar

    MoreType


Rules useless in grammar

  108 MoreType: Type Identifier MoreType
  109         | %empty


State 114 conflicts: 4 shift/reduce
State 205 conflicts: 5 shift/reduce
State 206 conflicts: 5 shift/reduce
State 220 conflicts: 5 shift/reduce
State 222 conflicts: 5 shift/reduce
State 237 conflicts: 5 shift/reduce
State 245 conflicts: 5 shift/reduce
State 246 conflicts: 5 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: MacroDefinition MainClass MultipleTypeDeclaration

    2 MainClass: Class Identifier LCbracket MainFuntion RCbracket

    3 Class: CLASS

    4 MainFuntion: PublicMain LRbracket String LSbracket RSbracket Identifier RRbracket LCbracket MainFunctionStatement RCbracket

    5 PublicMain: PUBLIC_STATIC_VOID_MAIN

    6 String: STRING

    7 MainFunctionStatement: SysOut LRbracket Expression RRbracket Semicolon

    8 MultipleTypeDeclaration: Class Identifier WithExtends
    9                        | %empty

   10 WithExtends: Extends Identifier LCbracket MultipleType MultipleMethod RCbracket MultipleTypeDeclaration
   11            | LCbracket MultipleType MultipleMethod RCbracket MultipleTypeDeclaration

   12 Extends: EXTENDS

   13 MultipleType: Type Identifier Semicolon MultipleType
   14             | %empty

   15 MultipleMethod: Public Type Identifier LRbracket MultipleTypeArgs RRbracket LCbracket MultipleTypeArgsStatement Return Expression Semicolon RCbracket MultipleMethod
   16               | %empty

   17 MultipleTypeArgsStatement: Type Identifier Semicolon MultipleTypeArgsStatement
   18                          | Statement

   19 Public: PUBLIC

   20 MultipleTypeArgs: Type Identifier MoreTypeArgs
   21                 | %empty

   22 MoreTypeArgs: Comma Type Identifier MoreTypeArgs
   23             | %empty

   24 Return: RETURN

   25 Type: Int IntBrackets
   26     | Boolean
   27     | Identifier

   28 IntBrackets: LSbracket RSbracket
   29            | %empty

   30 MacroDefinition: MacroDefExpression MacroDefinition
   31                | MacroDefStatement MacroDefinition
   32                | %empty

   33 MacroDefStatement: DefineStmt Identifier LRbracket ThreeArgs RRbracket LCbracket Statement RCbracket
   34                  | DefineStmt0 Identifier LRbracket RRbracket LCbracket Statement RCbracket
   35                  | DefineStmt1 Identifier LRbracket OneArg RRbracket LCbracket Statement RCbracket
   36                  | DefineStmt2 Identifier LRbracket TwoArgs RRbracket LCbracket Statement RCbracket

   37 DefineStmt: DEFINE_STMT

   38 DefineStmt0: DEFINE_STMT_0

   39 DefineStmt1: DEFINE_STMT_1

   40 DefineStmt2: DEFINE_STMT_2

   41 Statement: LCbracket Statement RCbracket
   42          | SysOut LRbracket Expression RRbracket Semicolon Statement
   43          | If LRbracket Expression RRbracket Statement ElsePart
   44          | Identifier IdentifierStatement
   45          | While LRbracket Expression RRbracket Statement Statement
   46          | %empty

   47 IdentifierStatement: Assign Expression Semicolon Statement
   48                    | LSbracket Expression RSbracket Assign Expression Semicolon Statement
   49                    | LRbracket NonZeroExpression RRbracket Semicolon

   50 ElsePart: Else Statement Statement

   51 SysOut: SYSTEM_OUT_PRINTLN

   52 Semicolon: SEMI_COLON

   53 Assign: ASSIGN

   54 If: IF

   55 Else: ELSE

   56 While: WHILE

   57 MacroDefExpression: DefineExpr Identifier LRbracket ThreeArgs RRbracket LRbracket Expression RRbracket
   58                   | DefineExpr0 Identifier LRbracket RRbracket LRbracket Expression RRbracket
   59                   | DefineExpr1 Identifier LRbracket OneArg RRbracket LRbracket Expression RRbracket
   60                   | DefineExpr2 Identifier LRbracket TwoArgs RRbracket LRbracket Expression RRbracket

   61 DefineExpr: DEFINE_EXPR

   62 DefineExpr0: DEFINE_EXPR_0

   63 DefineExpr1: DEFINE_EXPR_1

   64 DefineExpr2: DEFINE_EXPR_2

   65 Expression: PrimaryExpression SubExpression
   66           | Identifier LRbracket NonZeroExpression RRbracket

   67 SubExpression: Operation PrimaryExpression
   68              | LSbracket PrimaryExpression RSbracket
   69              | Length
   70              | Dot Identifier LRbracket NonZeroExpression RRbracket
   71              | %empty

   72 NonZeroExpression: Expression PositiveExpression
   73                  | %empty

   74 PositiveExpression: Comma Expression PositiveExpression
   75                   | %empty

   76 Operation: OPERATOR

   77 PrimaryExpression: Integer
   78                  | BoolVal
   79                  | Identifier
   80                  | This
   81                  | New Int LSbracket Expression RSbracket
   82                  | New Identifier LRbracket RRbracket
   83                  | Not Expression
   84                  | LRbracket Expression RRbracket

   85 BoolVal: TRUE
   86        | FALSE

   87 This: THIS

   88 Length: LENGTH

   89 New: NEW

   90 Int: INT

   91 Not: NOT

   92 Dot: DOT

   93 Boolean: BOOLEAN

   94 ThreeArgs: Identifier Comma Identifier Comma Identifier MoreArgs

   95 MoreArgs: Comma Identifier MoreArgs
   96         | %empty

   97 TwoArgs: Identifier Comma Identifier

   98 OneArg: Identifier

   99 Integer: INTEGER_LITERAL

  100 Identifier: IDENTIFIER

  101 LRbracket: LEFT_ROUND_BRACKET

  102 RRbracket: RIGHT_ROUND_BRACKET

  103 LSbracket: LEFT_SQR_BRACKET

  104 RSbracket: RIGHT_SQR_BRACKET

  105 LCbracket: LEFT_CURL_BRACKET

  106 RCbracket: RIGHT_CURL_BRACKET

  107 Comma: COMMA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DEFINE_EXPR (258) 61
    DEFINE_EXPR_0 (259) 62
    DEFINE_EXPR_1 (260) 63
    DEFINE_EXPR_2 (261) 64
    DEFINE_STMT (262) 37
    DEFINE_STMT_0 (263) 38
    DEFINE_STMT_1 (264) 39
    DEFINE_STMT_2 (265) 40
    LEFT_ROUND_BRACKET (266) 101
    RIGHT_ROUND_BRACKET (267) 102
    LEFT_SQR_BRACKET (268) 103
    RIGHT_SQR_BRACKET (269) 104
    LEFT_CURL_BRACKET (270) 105
    RIGHT_CURL_BRACKET (271) 106
    IDENTIFIER (272) 100
    INTEGER_LITERAL (273) 99
    TRUE (274) 85
    FALSE (275) 86
    THIS (276) 87
    NEW (277) 89
    INT (278) 90
    NOT (279) 91
    BOOLEAN (280) 93
    OPERATOR (281) 76
    DOT (282) 92
    COMMA (283) 107
    LENGTH (284) 88
    SEMI_COLON (285) 52
    ASSIGN (286) 53
    IF (287) 54
    ELSE (288) 55
    WHILE (289) 56
    RETURN (290) 24
    SYSTEM_OUT_PRINTLN (291) 51
    CLASS (292) 3
    PUBLIC_STATIC_VOID_MAIN (293) 5
    STRING (294) 6
    PUBLIC (295) 19
    EXTENDS (296) 12


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    Goal (43)
        on left: 1
        on right: 0
    MainClass (44)
        on left: 2
        on right: 1
    Class (45)
        on left: 3
        on right: 2 8
    MainFuntion (46)
        on left: 4
        on right: 2
    PublicMain (47)
        on left: 5
        on right: 4
    String (48)
        on left: 6
        on right: 4
    MainFunctionStatement (49)
        on left: 7
        on right: 4
    MultipleTypeDeclaration (50)
        on left: 8 9
        on right: 1 10 11
    WithExtends (51)
        on left: 10 11
        on right: 8
    Extends (52)
        on left: 12
        on right: 10
    MultipleType (53)
        on left: 13 14
        on right: 10 11 13
    MultipleMethod (54)
        on left: 15 16
        on right: 10 11 15
    MultipleTypeArgsStatement (55)
        on left: 17 18
        on right: 15 17
    Public (56)
        on left: 19
        on right: 15
    MultipleTypeArgs (57)
        on left: 20 21
        on right: 15
    MoreTypeArgs (58)
        on left: 22 23
        on right: 20 22
    Return (59)
        on left: 24
        on right: 15
    Type (60)
        on left: 25 26 27
        on right: 13 15 17 20 22
    IntBrackets (61)
        on left: 28 29
        on right: 25
    MacroDefinition (62)
        on left: 30 31 32
        on right: 1 30 31
    MacroDefStatement (63)
        on left: 33 34 35 36
        on right: 31
    DefineStmt (64)
        on left: 37
        on right: 33
    DefineStmt0 (65)
        on left: 38
        on right: 34
    DefineStmt1 (66)
        on left: 39
        on right: 35
    DefineStmt2 (67)
        on left: 40
        on right: 36
    Statement (68)
        on left: 41 42 43 44 45 46
        on right: 18 33 34 35 36 41 42 43 45 47 48 50
    IdentifierStatement (69)
        on left: 47 48 49
        on right: 44
    ElsePart (70)
        on left: 50
        on right: 43
    SysOut (71)
        on left: 51
        on right: 7 42
    Semicolon (72)
        on left: 52
        on right: 7 13 15 17 42 47 48 49
    Assign (73)
        on left: 53
        on right: 47 48
    If (74)
        on left: 54
        on right: 43
    Else (75)
        on left: 55
        on right: 50
    While (76)
        on left: 56
        on right: 45
    MacroDefExpression (77)
        on left: 57 58 59 60
        on right: 30
    DefineExpr (78)
        on left: 61
        on right: 57
    DefineExpr0 (79)
        on left: 62
        on right: 58
    DefineExpr1 (80)
        on left: 63
        on right: 59
    DefineExpr2 (81)
        on left: 64
        on right: 60
    Expression (82)
        on left: 65 66
        on right: 7 15 42 43 45 47 48 57 58 59 60 72 74 81 83 84
    SubExpression (83)
        on left: 67 68 69 70 71
        on right: 65
    NonZeroExpression (84)
        on left: 72 73
        on right: 49 66 70
    PositiveExpression (85)
        on left: 74 75
        on right: 72 74
    Operation (86)
        on left: 76
        on right: 67
    PrimaryExpression (87)
        on left: 77 78 79 80 81 82 83 84
        on right: 65 67 68
    BoolVal (88)
        on left: 85 86
        on right: 78
    This (89)
        on left: 87
        on right: 80
    Length (90)
        on left: 88
        on right: 69
    New (91)
        on left: 89
        on right: 81 82
    Int (92)
        on left: 90
        on right: 25 81
    Not (93)
        on left: 91
        on right: 83
    Dot (94)
        on left: 92
        on right: 70
    Boolean (95)
        on left: 93
        on right: 26
    ThreeArgs (96)
        on left: 94
        on right: 33 57
    MoreArgs (97)
        on left: 95 96
        on right: 94 95
    TwoArgs (98)
        on left: 97
        on right: 36 60
    OneArg (99)
        on left: 98
        on right: 35 59
    Integer (100)
        on left: 99
        on right: 77
    Identifier (101)
        on left: 100
        on right: 2 4 8 10 13 15 17 20 22 27 33 34 35 36 44 57 58 59 60 66 70 79 82 94 95 97 98
    LRbracket (102)
        on left: 101
        on right: 4 7 15 33 34 35 36 42 43 45 49 57 58 59 60 66 70 82 84
    RRbracket (103)
        on left: 102
        on right: 4 7 15 33 34 35 36 42 43 45 49 57 58 59 60 66 70 82 84
    LSbracket (104)
        on left: 103
        on right: 4 28 48 68 81
    RSbracket (105)
        on left: 104
        on right: 4 28 48 68 81
    LCbracket (106)
        on left: 105
        on right: 2 4 10 11 15 33 34 35 36 41
    RCbracket (107)
        on left: 106
        on right: 2 4 10 11 15 33 34 35 36 41
    Comma (108)
        on left: 107
        on right: 22 74 94 95 97


State 0

    0 $accept: . Goal $end

    DEFINE_EXPR    shift, and go to state 1
    DEFINE_EXPR_0  shift, and go to state 2
    DEFINE_EXPR_1  shift, and go to state 3
    DEFINE_EXPR_2  shift, and go to state 4
    DEFINE_STMT    shift, and go to state 5
    DEFINE_STMT_0  shift, and go to state 6
    DEFINE_STMT_1  shift, and go to state 7
    DEFINE_STMT_2  shift, and go to state 8

    $default  reduce using rule 32 (MacroDefinition)

    Goal                go to state 9
    MacroDefinition     go to state 10
    MacroDefStatement   go to state 11
    DefineStmt          go to state 12
    DefineStmt0         go to state 13
    DefineStmt1         go to state 14
    DefineStmt2         go to state 15
    MacroDefExpression  go to state 16
    DefineExpr          go to state 17
    DefineExpr0         go to state 18
    DefineExpr1         go to state 19
    DefineExpr2         go to state 20


State 1

   61 DefineExpr: DEFINE_EXPR .

    $default  reduce using rule 61 (DefineExpr)


State 2

   62 DefineExpr0: DEFINE_EXPR_0 .

    $default  reduce using rule 62 (DefineExpr0)


State 3

   63 DefineExpr1: DEFINE_EXPR_1 .

    $default  reduce using rule 63 (DefineExpr1)


State 4

   64 DefineExpr2: DEFINE_EXPR_2 .

    $default  reduce using rule 64 (DefineExpr2)


State 5

   37 DefineStmt: DEFINE_STMT .

    $default  reduce using rule 37 (DefineStmt)


State 6

   38 DefineStmt0: DEFINE_STMT_0 .

    $default  reduce using rule 38 (DefineStmt0)


State 7

   39 DefineStmt1: DEFINE_STMT_1 .

    $default  reduce using rule 39 (DefineStmt1)


State 8

   40 DefineStmt2: DEFINE_STMT_2 .

    $default  reduce using rule 40 (DefineStmt2)


State 9

    0 $accept: Goal . $end

    $end  shift, and go to state 21


State 10

    1 Goal: MacroDefinition . MainClass MultipleTypeDeclaration

    CLASS  shift, and go to state 22

    MainClass  go to state 23
    Class      go to state 24


State 11

   31 MacroDefinition: MacroDefStatement . MacroDefinition

    DEFINE_EXPR    shift, and go to state 1
    DEFINE_EXPR_0  shift, and go to state 2
    DEFINE_EXPR_1  shift, and go to state 3
    DEFINE_EXPR_2  shift, and go to state 4
    DEFINE_STMT    shift, and go to state 5
    DEFINE_STMT_0  shift, and go to state 6
    DEFINE_STMT_1  shift, and go to state 7
    DEFINE_STMT_2  shift, and go to state 8

    $default  reduce using rule 32 (MacroDefinition)

    MacroDefinition     go to state 25
    MacroDefStatement   go to state 11
    DefineStmt          go to state 12
    DefineStmt0         go to state 13
    DefineStmt1         go to state 14
    DefineStmt2         go to state 15
    MacroDefExpression  go to state 16
    DefineExpr          go to state 17
    DefineExpr0         go to state 18
    DefineExpr1         go to state 19
    DefineExpr2         go to state 20


State 12

   33 MacroDefStatement: DefineStmt . Identifier LRbracket ThreeArgs RRbracket LCbracket Statement RCbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 27


State 13

   34 MacroDefStatement: DefineStmt0 . Identifier LRbracket RRbracket LCbracket Statement RCbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 28


State 14

   35 MacroDefStatement: DefineStmt1 . Identifier LRbracket OneArg RRbracket LCbracket Statement RCbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 29


State 15

   36 MacroDefStatement: DefineStmt2 . Identifier LRbracket TwoArgs RRbracket LCbracket Statement RCbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 30


State 16

   30 MacroDefinition: MacroDefExpression . MacroDefinition

    DEFINE_EXPR    shift, and go to state 1
    DEFINE_EXPR_0  shift, and go to state 2
    DEFINE_EXPR_1  shift, and go to state 3
    DEFINE_EXPR_2  shift, and go to state 4
    DEFINE_STMT    shift, and go to state 5
    DEFINE_STMT_0  shift, and go to state 6
    DEFINE_STMT_1  shift, and go to state 7
    DEFINE_STMT_2  shift, and go to state 8

    $default  reduce using rule 32 (MacroDefinition)

    MacroDefinition     go to state 31
    MacroDefStatement   go to state 11
    DefineStmt          go to state 12
    DefineStmt0         go to state 13
    DefineStmt1         go to state 14
    DefineStmt2         go to state 15
    MacroDefExpression  go to state 16
    DefineExpr          go to state 17
    DefineExpr0         go to state 18
    DefineExpr1         go to state 19
    DefineExpr2         go to state 20


State 17

   57 MacroDefExpression: DefineExpr . Identifier LRbracket ThreeArgs RRbracket LRbracket Expression RRbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 32


State 18

   58 MacroDefExpression: DefineExpr0 . Identifier LRbracket RRbracket LRbracket Expression RRbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 33


State 19

   59 MacroDefExpression: DefineExpr1 . Identifier LRbracket OneArg RRbracket LRbracket Expression RRbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 34


State 20

   60 MacroDefExpression: DefineExpr2 . Identifier LRbracket TwoArgs RRbracket LRbracket Expression RRbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 35


State 21

    0 $accept: Goal $end .

    $default  accept


State 22

    3 Class: CLASS .

    $default  reduce using rule 3 (Class)


State 23

    1 Goal: MacroDefinition MainClass . MultipleTypeDeclaration

    CLASS  shift, and go to state 22

    $default  reduce using rule 9 (MultipleTypeDeclaration)

    Class                    go to state 36
    MultipleTypeDeclaration  go to state 37


State 24

    2 MainClass: Class . Identifier LCbracket MainFuntion RCbracket

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 38


State 25

   31 MacroDefinition: MacroDefStatement MacroDefinition .

    $default  reduce using rule 31 (MacroDefinition)


State 26

  100 Identifier: IDENTIFIER .

    $default  reduce using rule 100 (Identifier)


State 27

   33 MacroDefStatement: DefineStmt Identifier . LRbracket ThreeArgs RRbracket LCbracket Statement RCbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 40


State 28

   34 MacroDefStatement: DefineStmt0 Identifier . LRbracket RRbracket LCbracket Statement RCbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 41


State 29

   35 MacroDefStatement: DefineStmt1 Identifier . LRbracket OneArg RRbracket LCbracket Statement RCbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 42


State 30

   36 MacroDefStatement: DefineStmt2 Identifier . LRbracket TwoArgs RRbracket LCbracket Statement RCbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 43


State 31

   30 MacroDefinition: MacroDefExpression MacroDefinition .

    $default  reduce using rule 30 (MacroDefinition)


State 32

   57 MacroDefExpression: DefineExpr Identifier . LRbracket ThreeArgs RRbracket LRbracket Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 44


State 33

   58 MacroDefExpression: DefineExpr0 Identifier . LRbracket RRbracket LRbracket Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 45


State 34

   59 MacroDefExpression: DefineExpr1 Identifier . LRbracket OneArg RRbracket LRbracket Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 46


State 35

   60 MacroDefExpression: DefineExpr2 Identifier . LRbracket TwoArgs RRbracket LRbracket Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 47


State 36

    8 MultipleTypeDeclaration: Class . Identifier WithExtends

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 48


State 37

    1 Goal: MacroDefinition MainClass MultipleTypeDeclaration .

    $default  reduce using rule 1 (Goal)


State 38

    2 MainClass: Class Identifier . LCbracket MainFuntion RCbracket

    LEFT_CURL_BRACKET  shift, and go to state 49

    LCbracket  go to state 50


State 39

  101 LRbracket: LEFT_ROUND_BRACKET .

    $default  reduce using rule 101 (LRbracket)


State 40

   33 MacroDefStatement: DefineStmt Identifier LRbracket . ThreeArgs RRbracket LCbracket Statement RCbracket

    IDENTIFIER  shift, and go to state 26

    ThreeArgs   go to state 51
    Identifier  go to state 52


State 41

   34 MacroDefStatement: DefineStmt0 Identifier LRbracket . RRbracket LCbracket Statement RCbracket

    RIGHT_ROUND_BRACKET  shift, and go to state 53

    RRbracket  go to state 54


State 42

   35 MacroDefStatement: DefineStmt1 Identifier LRbracket . OneArg RRbracket LCbracket Statement RCbracket

    IDENTIFIER  shift, and go to state 26

    OneArg      go to state 55
    Identifier  go to state 56


State 43

   36 MacroDefStatement: DefineStmt2 Identifier LRbracket . TwoArgs RRbracket LCbracket Statement RCbracket

    IDENTIFIER  shift, and go to state 26

    TwoArgs     go to state 57
    Identifier  go to state 58


State 44

   57 MacroDefExpression: DefineExpr Identifier LRbracket . ThreeArgs RRbracket LRbracket Expression RRbracket

    IDENTIFIER  shift, and go to state 26

    ThreeArgs   go to state 59
    Identifier  go to state 52


State 45

   58 MacroDefExpression: DefineExpr0 Identifier LRbracket . RRbracket LRbracket Expression RRbracket

    RIGHT_ROUND_BRACKET  shift, and go to state 53

    RRbracket  go to state 60


State 46

   59 MacroDefExpression: DefineExpr1 Identifier LRbracket . OneArg RRbracket LRbracket Expression RRbracket

    IDENTIFIER  shift, and go to state 26

    OneArg      go to state 61
    Identifier  go to state 56


State 47

   60 MacroDefExpression: DefineExpr2 Identifier LRbracket . TwoArgs RRbracket LRbracket Expression RRbracket

    IDENTIFIER  shift, and go to state 26

    TwoArgs     go to state 62
    Identifier  go to state 58


State 48

    8 MultipleTypeDeclaration: Class Identifier . WithExtends

    LEFT_CURL_BRACKET  shift, and go to state 49
    EXTENDS            shift, and go to state 63

    WithExtends  go to state 64
    Extends      go to state 65
    LCbracket    go to state 66


State 49

  105 LCbracket: LEFT_CURL_BRACKET .

    $default  reduce using rule 105 (LCbracket)


State 50

    2 MainClass: Class Identifier LCbracket . MainFuntion RCbracket

    PUBLIC_STATIC_VOID_MAIN  shift, and go to state 67

    MainFuntion  go to state 68
    PublicMain   go to state 69


State 51

   33 MacroDefStatement: DefineStmt Identifier LRbracket ThreeArgs . RRbracket LCbracket Statement RCbracket

    RIGHT_ROUND_BRACKET  shift, and go to state 53

    RRbracket  go to state 70


State 52

   94 ThreeArgs: Identifier . Comma Identifier Comma Identifier MoreArgs

    COMMA  shift, and go to state 71

    Comma  go to state 72


State 53

  102 RRbracket: RIGHT_ROUND_BRACKET .

    $default  reduce using rule 102 (RRbracket)


State 54

   34 MacroDefStatement: DefineStmt0 Identifier LRbracket RRbracket . LCbracket Statement RCbracket

    LEFT_CURL_BRACKET  shift, and go to state 49

    LCbracket  go to state 73


State 55

   35 MacroDefStatement: DefineStmt1 Identifier LRbracket OneArg . RRbracket LCbracket Statement RCbracket

    RIGHT_ROUND_BRACKET  shift, and go to state 53

    RRbracket  go to state 74


State 56

   98 OneArg: Identifier .

    $default  reduce using rule 98 (OneArg)


State 57

   36 MacroDefStatement: DefineStmt2 Identifier LRbracket TwoArgs . RRbracket LCbracket Statement RCbracket

    RIGHT_ROUND_BRACKET  shift, and go to state 53

    RRbracket  go to state 75


State 58

   97 TwoArgs: Identifier . Comma Identifier

    COMMA  shift, and go to state 71

    Comma  go to state 76


State 59

   57 MacroDefExpression: DefineExpr Identifier LRbracket ThreeArgs . RRbracket LRbracket Expression RRbracket

    RIGHT_ROUND_BRACKET  shift, and go to state 53

    RRbracket  go to state 77


State 60

   58 MacroDefExpression: DefineExpr0 Identifier LRbracket RRbracket . LRbracket Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 78


State 61

   59 MacroDefExpression: DefineExpr1 Identifier LRbracket OneArg . RRbracket LRbracket Expression RRbracket

    RIGHT_ROUND_BRACKET  shift, and go to state 53

    RRbracket  go to state 79


State 62

   60 MacroDefExpression: DefineExpr2 Identifier LRbracket TwoArgs . RRbracket LRbracket Expression RRbracket

    RIGHT_ROUND_BRACKET  shift, and go to state 53

    RRbracket  go to state 80


State 63

   12 Extends: EXTENDS .

    $default  reduce using rule 12 (Extends)


State 64

    8 MultipleTypeDeclaration: Class Identifier WithExtends .

    $default  reduce using rule 8 (MultipleTypeDeclaration)


State 65

   10 WithExtends: Extends . Identifier LCbracket MultipleType MultipleMethod RCbracket MultipleTypeDeclaration

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 81


State 66

   11 WithExtends: LCbracket . MultipleType MultipleMethod RCbracket MultipleTypeDeclaration

    IDENTIFIER  shift, and go to state 26
    INT         shift, and go to state 82
    BOOLEAN     shift, and go to state 83

    $default  reduce using rule 14 (MultipleType)

    MultipleType  go to state 84
    Type          go to state 85
    Int           go to state 86
    Boolean       go to state 87
    Identifier    go to state 88


State 67

    5 PublicMain: PUBLIC_STATIC_VOID_MAIN .

    $default  reduce using rule 5 (PublicMain)


State 68

    2 MainClass: Class Identifier LCbracket MainFuntion . RCbracket

    RIGHT_CURL_BRACKET  shift, and go to state 89

    RCbracket  go to state 90


State 69

    4 MainFuntion: PublicMain . LRbracket String LSbracket RSbracket Identifier RRbracket LCbracket MainFunctionStatement RCbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 91


State 70

   33 MacroDefStatement: DefineStmt Identifier LRbracket ThreeArgs RRbracket . LCbracket Statement RCbracket

    LEFT_CURL_BRACKET  shift, and go to state 49

    LCbracket  go to state 92


State 71

  107 Comma: COMMA .

    $default  reduce using rule 107 (Comma)


State 72

   94 ThreeArgs: Identifier Comma . Identifier Comma Identifier MoreArgs

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 93


State 73

   34 MacroDefStatement: DefineStmt0 Identifier LRbracket RRbracket LCbracket . Statement RCbracket

    LEFT_CURL_BRACKET   shift, and go to state 49
    IDENTIFIER          shift, and go to state 26
    IF                  shift, and go to state 94
    WHILE               shift, and go to state 95
    SYSTEM_OUT_PRINTLN  shift, and go to state 96

    $default  reduce using rule 46 (Statement)

    Statement   go to state 97
    SysOut      go to state 98
    If          go to state 99
    While       go to state 100
    Identifier  go to state 101
    LCbracket   go to state 102


State 74

   35 MacroDefStatement: DefineStmt1 Identifier LRbracket OneArg RRbracket . LCbracket Statement RCbracket

    LEFT_CURL_BRACKET  shift, and go to state 49

    LCbracket  go to state 103


State 75

   36 MacroDefStatement: DefineStmt2 Identifier LRbracket TwoArgs RRbracket . LCbracket Statement RCbracket

    LEFT_CURL_BRACKET  shift, and go to state 49

    LCbracket  go to state 104


State 76

   97 TwoArgs: Identifier Comma . Identifier

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 105


State 77

   57 MacroDefExpression: DefineExpr Identifier LRbracket ThreeArgs RRbracket . LRbracket Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 106


State 78

   58 MacroDefExpression: DefineExpr0 Identifier LRbracket RRbracket LRbracket . Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39
    IDENTIFIER          shift, and go to state 26
    INTEGER_LITERAL     shift, and go to state 107
    TRUE                shift, and go to state 108
    FALSE               shift, and go to state 109
    THIS                shift, and go to state 110
    NEW                 shift, and go to state 111
    NOT                 shift, and go to state 112

    Expression         go to state 113
    PrimaryExpression  go to state 114
    BoolVal            go to state 115
    This               go to state 116
    New                go to state 117
    Not                go to state 118
    Integer            go to state 119
    Identifier         go to state 120
    LRbracket          go to state 121


State 79

   59 MacroDefExpression: DefineExpr1 Identifier LRbracket OneArg RRbracket . LRbracket Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 122


State 80

   60 MacroDefExpression: DefineExpr2 Identifier LRbracket TwoArgs RRbracket . LRbracket Expression RRbracket

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 123


State 81

   10 WithExtends: Extends Identifier . LCbracket MultipleType MultipleMethod RCbracket MultipleTypeDeclaration

    LEFT_CURL_BRACKET  shift, and go to state 49

    LCbracket  go to state 124


State 82

   90 Int: INT .

    $default  reduce using rule 90 (Int)


State 83

   93 Boolean: BOOLEAN .

    $default  reduce using rule 93 (Boolean)


State 84

   11 WithExtends: LCbracket MultipleType . MultipleMethod RCbracket MultipleTypeDeclaration

    PUBLIC  shift, and go to state 125

    $default  reduce using rule 16 (MultipleMethod)

    MultipleMethod  go to state 126
    Public          go to state 127


State 85

   13 MultipleType: Type . Identifier Semicolon MultipleType

    IDENTIFIER  shift, and go to state 26

    Identifier  go to state 128


State 86

   25 Type: Int . IntBrackets

    LEFT_SQR_BRACKET  shift, and go to state 129

    $default  reduce using rule 29 (IntBrackets)

    IntBrackets  go to state 130
    LSbracket    go to state 131


State 87

   26 Type: Boolean .

    $default  reduce using rule 26 (Type)


State 88

   27 Type: Identifier .

    $default  reduce using rule 27 (Type)


State 89

  106 RCbracket: RIGHT_CURL_BRACKET .

    $default  reduce using rule 106 (RCbracket)


State 90

    2 MainClass: Class Identifier LCbracket MainFuntion RCbracket .

    $default  reduce using rule 2 (MainClass)


State 91

    4 MainFuntion: PublicMain LRbracket . String LSbracket RSbracket Identifier RRbracket LCbracket MainFunctionStatement RCbracket

    STRING  shift, and go to state 132

    String  go to state 133


State 92

   33 MacroDefStatement: DefineStmt Identifier LRbracket ThreeArgs RRbracket LCbracket . Statement RCbracket

    LEFT_CURL_BRACKET   shift, and go to state 49
    IDENTIFIER          shift, and go to state 26
    IF                  shift, and go to state 94
    WHILE               shift, and go to state 95
    SYSTEM_OUT_PRINTLN  shift, and go to state 96

    $default  reduce using rule 46 (Statement)

    Statement   go to state 134
    SysOut      go to state 98
    If          go to state 99
    While       go to state 100
    Identifier  go to state 101
    LCbracket   go to state 102


State 93

   94 ThreeArgs: Identifier Comma Identifier . Comma Identifier MoreArgs

    COMMA  shift, and go to state 71

    Comma  go to state 135


State 94

   54 If: IF .

    $default  reduce using rule 54 (If)


State 95

   56 While: WHILE .

    $default  reduce using rule 56 (While)


State 96

   51 SysOut: SYSTEM_OUT_PRINTLN .

    $default  reduce using rule 51 (SysOut)


State 97

   34 MacroDefStatement: DefineStmt0 Identifier LRbracket RRbracket LCbracket Statement . RCbracket

    RIGHT_CURL_BRACKET  shift, and go to state 89

    RCbracket  go to state 136


State 98

   42 Statement: SysOut . LRbracket Expression RRbracket Semicolon Statement

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 137


State 99

   43 Statement: If . LRbracket Expression RRbracket Statement ElsePart

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 138


State 100

   45 Statement: While . LRbracket Expression RRbracket Statement Statement

    LEFT_ROUND_BRACKET  shift, and go to state 39

    LRbracket  go to state 139


State 101

   44 Statement: Identifier . IdentifierStatement

    LEFT_ROUND_BRACKET  shift, and go to state 39
    LEFT_SQR_BRACKET    shift, and go to state 129
    ASSIGN              shift, and go to state 140

    IdentifierStatement  go to state 141
    Assign               go to state 142
    LRbracket            go to state 143
    LSbracket            go to state 144


State 102

   41 Statement: LCbracket . Statement RCbracket

    LEFT_CURL_BRACKET   shift, and go to state 49
    IDENTIFIER          shift, and go to state 26
    IF                  shift, and go to state 94
    WHILE               shift, and go to state 95
    SYSTEM_OUT_PRINTLN  shift, and go to state 96
